[new] server for authoring assistant